2004-11-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/convert-ly.py (conv): add warning about
	set-global-staff-size.

	* Doxyfile: add. 

	* scripts/convert-ly.py (conv): add raggedlastbottom rule
	(conv): warn for TextSpanner split.
	(conv): warn for textheight.

2004-11-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (install-WWW): Invoke install-info, so that when
	building the documentation, info with images are installed.
	(final-install): Fix description.  Mention sourcing of login
	scripts (instead of running).

2004-11-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Debian lmodern support.  Note that LilyPond will issue warnings
	
	    no such encoding: "FontSpecific"

	  The font selection mechanism wants to get the encoding from the
	  font itself, but the idea of lmodern is that it is usable with
	  different encodings, ie, Lily should get the encoding from the
	  font tree, rather than the font itself.  This would require some
	  more work.
	
	* configure.in: Test for and accept lmodern if EC fonts not found.

	* scm/framework-tex.scm (font-load-command): TeX font name
	mangling for latin1 encoded cork-lm fonts.
	(convert-to-ps): Load lm.map if available.

	* ly/paper-defaults.ly: Use cork-lm encoding if ec is not
	available.

	* scm/encoding.scm (coding-alist): Add cork-lm encoding.

	* scm/font.scm: Add header.  Autoload cork-lm and ec fonts if
	available.

	* lily/kpath.cc (ly_kpathsea_find_file): Rename.  Do not use
	path for absolute file name, that is silly.

	* lily/score-engraver.cc (initialize): 

	* Documentation/user/GNUmakefile (local-install-info): Invoke
	install-info --remove first.

	* #include cleanup (Andreas Scherer).

2004-11-18  Heikki Junes  <hjunes@cc.hut.fi>

	* input/test/script-abbreviations.ly: fix typos.

2004-11-17  Werner Lemberg  <wl@gnu.org>

	* python/lilylib.py (options_help_str): Support pretty-printing of
	newlines in fourth element of option description.
