@@ -1,5 +1,10 @@
 2004-11-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* scm/output-ps.scm (new-text): new function. Use glyphshow to
+	show glyphs.
+
+	* scm/encoding.scm (decode-byte-string): new function.
+
 	* scripts/convert-ly.py (conv): add warning about
 	set-global-staff-size.
 
